Версия 2.3
- Подключил Lombok, геттеры, конструкторы и утилитные классы переведены на аннотации
- Messages отдаёт шаблоны напрямую вместо десятков обёрток
- Статический GUItems заменён на MenuItems, превью кита перенесено в KitMenu
- Сохранение данных игроков сведено в один путь, финальный сброс после остановки воркеров
- Выдача кита докладывает предметы в неполные стаки, остаток выпадает на землю
- Отдельное сообщение для недопустимого права в /sk setperm
- /kit <кит> <игрок> с пустым китом сообщает об ошибке администратору
- MemoryCache хранит записи без сериализации в строку
- Инициализация поколения Redis без гонки между серверами
- Версия в шапках config.yml, messages.yml и database.yml подставляется при сборке
- Убраны нерабочие таски buildBoth, мёртвый код и folia-supported